client/public/css/styles.css
/*==========index.html==========*/
.social {
  height: 50px;
  width: 50px;
  text-align: center;
}
.social:hover {
  -webkit-filter:saturate(2.0);
}
.modal-row {
  margin-bottom: 0;
}

/*=====navbar=====*/

.navbar-font-color{
  color:#90caf9;
}


/*=====footer=====*/
/*will equally space all cards along a given screen width*/
/*.card-container{
  display:flex;
  justify-content:space-between;
}*/

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
  }

#footer-spacer{
  padding-left: 5em;
}

.footer-row-title{
  color:white;
}
.social-footer{
  height:15px;
  width:15px;
  padding-top: 2px;
}

#responsive-footer-container{
  color:white;
}

/*changes background of popped-out portion*/
#footer-collapsible{
  border-color:#424242;

}
/*changes color of non-popped-out collapsible*/
.footer-collapsible-header{
  background-color: #424242;
}

.drop-down-container{
  font-size:12px;
  padding: 5px;
}

.collapsible-content-spacer{
  color:#90caf9;
  padding-left: 1.5em;
  padding-top: .5em;
  padding-bottom: .5em;
}

/*==========landing.html==========*/

.dev-team{
  text-align: center;
}

.collection-item.avatar {
  height: 60px;
  width: 60px;
}

/*=====FAQ=====*/

/*=====tech-stack=====*/
#tech-stack-container{
  padding-left: 2em;
}

/*=====team-intro cards=====*/
.card-reveal-content{
  font-size:.8em;
}

/*changes size of p-content below card title*/
.card-content{
  font-size:.8em;
}

.card-spacer{
  padding-top: .4em;
}

.card-title-sizer{
  font-size:1em;
}

/*===========dashboard===========*/

.price {
  float:right;
  font-size:16px;
  color:green;
}

.card-small {
  min-width: 250px;
}

.container .ng-scope {
  width: 100%;
}

.material-icons {
  font-size: 2em;
}

/*.icon-edit {
  max-width: 40px;
}*/
/*========create-recipes=========*/

.addButton {
  position:relative;
  min-height:50px;
}

.bottom {
  position:absolute;
  bottom:0;
  left:0;
}

.trash-small {
  height:18px;
  width:18px;
}

.trash-icon-small {
  font-size:16px;
  position:relative;
  bottom:13px;
}

/*========shopping-list=========*/

.quantity {
  width:50px;
}

.priceForm {
  display:inline-block;
}

/*============fridge============*/

.bottom-right {
  bottom: 45px;
  right: 24px;
}

.minus {
  position:relative;
  bottom:12px;
}

.minus-small {
  height:12px;
  width:12px;
}

#expire-message {
  color:red;
  width:20%;
}

